se controla la funcion de search completa (errores, reset, busqueda con registro , mensaje no mas ocurrencias , final de fichero)